--- a/config/controllers.yaml
+++ b/config/controllers.yaml
@@ -32,7 +32,7 @@ diff_drive_base_controller:
     pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
     twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
     cmd_vel_timeout: 0.25
-    base_frame_id: dummy_root
+    base_frame_id: base_footprint
     enable_odom_tf: true
     publish_limited_velocity: true
     linear:
