--- a/config/controllers.yaml
+++ b/config/controllers.yaml
@@ -33,7 +33,7 @@ diff_drive_base_controller:
     twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
     cmd_vel_timeout: 0.25
     base_frame_id: base_footprint
-    enable_odom_tf: true
+    enable_odom_tf: false
     publish_limited_velocity: true
     linear:
       x:
